@@ -1505,19 +1505,22 @@ glue (void)
   copyFile (asmFile, sfrbit->oFile);
   
   /*JCF: Create the areas for the register banks*/
-  if(RegBankUsed[0]||RegBankUsed[1]||RegBankUsed[2]||RegBankUsed[3])
+  if( TARGET_IS_MCS51 || TARGET_IS_DS390 || TARGET_IS_XA51 )
   {
-     fprintf (asmFile, "%s", iComments2);
-     fprintf (asmFile, "; overlayable register banks \n");
-     fprintf (asmFile, "%s", iComments2);
-     if(RegBankUsed[0])
-        fprintf (asmFile, "\t.area REG_BANK_0\t(REL,OVR,DATA)\n\t.ds 8\n");
-     if(RegBankUsed[1]||options.parms_in_bank1)
-        fprintf (asmFile, "\t.area REG_BANK_1\t(REL,OVR,DATA)\n\t.ds 8\n");
-     if(RegBankUsed[2])
-        fprintf (asmFile, "\t.area REG_BANK_2\t(REL,OVR,DATA)\n\t.ds 8\n");
-     if(RegBankUsed[3])
-        fprintf (asmFile, "\t.area REG_BANK_3\t(REL,OVR,DATA)\n\t.ds 8\n");
+	  if(RegBankUsed[0]||RegBankUsed[1]||RegBankUsed[2]||RegBankUsed[3])
+	  {
+		 fprintf (asmFile, "%s", iComments2);
+		 fprintf (asmFile, "; overlayable register banks \n");
+		 fprintf (asmFile, "%s", iComments2);
+		 if(RegBankUsed[0])
+			fprintf (asmFile, "\t.area REG_BANK_0\t(REL,OVR,DATA)\n\t.ds 8\n");
+		 if(RegBankUsed[1]||options.parms_in_bank1)
+			fprintf (asmFile, "\t.area REG_BANK_1\t(REL,OVR,DATA)\n\t.ds 8\n");
+		 if(RegBankUsed[2])
+			fprintf (asmFile, "\t.area REG_BANK_2\t(REL,OVR,DATA)\n\t.ds 8\n");
+		 if(RegBankUsed[3])
+			fprintf (asmFile, "\t.area REG_BANK_3\t(REL,OVR,DATA)\n\t.ds 8\n");
+	  }
   }
 
   /* copy the data segment */
